Added an about us section with a description

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="index.css">
 
     <title>Restaurant Website</title>
+    
+<div>
   </head>
-
   <nav>
     <ul class="nav-flex-row">
       <li class="nav-item">
@@ -27,3 +28,22 @@
       </li>
     </ul>
   </nav>
+</div>
+
+<section class="about-us">
+  <header>
+    <h1>About Us</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+      A quos, voluptatum illum mollitia dolores libero placeat 
+      nesciunt quasi adipisci impedit!Lorem ipsum dolor sit, 
+      amet consectetur adipisicing elit. 
+      A quos, voluptatum illum mollitia dolores libero placeat 
+      nesciunt quasi adipisci impedit!
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+      A quos, voluptatum illum mollitia dolores libero placeat 
+      nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
+    </p>
+  </header>
+  
+</section>
