created gitignore; added banner to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   </nav>
 </div>
 
+<section class ="banner-section">
+  <img id="pageBanner" src="./Assets/Images/Banner.png" alt="The banner does it's best and is perparing. Please watch warmly until it is ready.">
+</section>
+
+<section class = "food-menu-seciton"></section>
+
 <section class="about-us">
   <header>
     <h1>About Us</h1>
