minor formatting and/or unifying commit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
   <img id="pageBanner" src="./Assets/Images/Banner.png" alt="The banner does it's best and is perparing. Please watch warmly until it is ready.">
 </section>
 
-<section class = "food-menu-seciton"></section>
 
 <section class="about-us">
   <header>
@@ -51,5 +50,21 @@
       nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
     </p>
   </header>
+</section>
 
+<section class = "food-menu-seciton">
+  <header>
+    <h1>Menu Items</h1>
+    <p>
+      content:<br>
+      this section should have all 4 menu items.<br>
+      extra: items will be always in center.<br>
+      extra: items will change number of columns based on window width.
+    </p>
+    <div class="row">
+      <div class="column">
+
+      </div>
+    </div>
+  </header>
 </section>
