--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
     </p>
     <div class="row">
       <div class="column">
-
+        <img src="Assets/Images/chickenandwaffle.png" alt="menu item 1">
+        <img src="Assets/Images/cereal.png" alt="menu item 3">
+      </div>
+      <div class ="column">
+        <img src="Assets/Images/pancakes.png" alt="menu item 2">
+        <img src="Assets/Images/sausageandeggs.png" alt="menu item 4">
       </div>
     </div>
   </header>
