gave page body an id

--- a/index.html
+++ b/index.html
@@ -30,46 +30,48 @@
   </nav>
 </div>
 
-<section class ="banner-section">
-  <img id="pageBanner" src="./Assets/Images/Banner.png" alt="The banner does it's best and is perparing. Please watch warmly until it is ready.">
-</section>
+<body id="page-body">
+  <section class ="banner-section">
+    <img id="pageBanner" src="./Assets/Images/Banner.png" alt="The banner does it's best and is perparing. Please watch warmly until it is ready.">
+  </section>
 
 
-<section class="about-us">
-  <header>
-    <h1>About Us</h1>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-      A quos, voluptatum illum mollitia dolores libero placeat
-      nesciunt quasi adipisci impedit!Lorem ipsum dolor sit,
-      amet consectetur adipisicing elit.
-      A quos, voluptatum illum mollitia dolores libero placeat
-      nesciunt quasi adipisci impedit!
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-      A quos, voluptatum illum mollitia dolores libero placeat
-      nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
-    </p>
-  </header>
-</section>
+  <section class="about-us">
+    <header>
+      <h1>About Us</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        A quos, voluptatum illum mollitia dolores libero placeat
+        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit,
+        amet consectetur adipisicing elit.
+        A quos, voluptatum illum mollitia dolores libero placeat
+        nesciunt quasi adipisci impedit!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        A quos, voluptatum illum mollitia dolores libero placeat
+        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
+      </p>
+    </header>
+  </section>
 
-<section class = "food-menu-seciton">
-  <header>
-    <h1>Menu Items</h1>
-    <p>
-      content:<br>
-      this section should have all 4 menu items.<br>
-      extra: items will be always in center.<br>
-      extra: items will change number of columns based on window width.
-    </p>
-    <div class="row">
-      <div class="column">
-        <img src="Assets/Images/chickenandwaffle.png" alt="menu item 1">
-        <img src="Assets/Images/cereal.png" alt="menu item 3">
+  <section class = "food-menu-seciton">
+    <header>
+      <h1>Menu Items</h1>
+      <p>
+        content:<br>
+        this section should have all 4 menu items.<br>
+        extra: items will be always in center.<br>
+        extra: items will change number of columns based on window width.
+      </p>
+      <div class="row">
+        <div class="column">
+          <img src="Assets/Images/chickenandwaffle.png" alt="menu item 1">
+          <img src="Assets/Images/cereal.png" alt="menu item 3">
+        </div>
+        <div class ="column">
+          <img src="Assets/Images/pancakes.png" alt="menu item 2">
+          <img src="Assets/Images/sausageandeggs.png" alt="menu item 4">
+        </div>
       </div>
-      <div class ="column">
-        <img src="Assets/Images/pancakes.png" alt="menu item 2">
-        <img src="Assets/Images/sausageandeggs.png" alt="menu item 4">
-      </div>
-    </div>
-  </header>
-</section>
+    </header>
+  </section>
+</body>
