--- a/index.html
+++ b/index.html
@@ -62,26 +62,12 @@
         extra: items will be always in center.<br>
         extra: items will change number of columns based on window width.
       </p>
-      <div class="row">
-        <div class="column">
-          <img src="Assets/Images/chickenandwaffle.png" alt="menu item 1">
-          <p class="menu-item-title">menu item 1 title</p>
-          <p class="menu-item-description">menu item 1 information</p>
-          <img src="Assets/Images/cereal.png" alt="menu item 2">
-          <p class="menu-item-title">menu item 2 title</p>
-          <p class="menu-item-description">menu item 2 description</p>
-        </div>
-        <div class ="column">
-          <img src="Assets/Images/pancakes.png" alt="menu item 3">
-          <p class="menu-item-title">menu item 3 title</p>
-          <p class="menu-item-description">menu item 3 description</p>
-
-          <img src="Assets/Images/sausageandeggs.png" alt="menu item 4">
-          <p class="menu-item-title">menu item 4 title</p>
-          <p class="menu-item-description">menu item 4 description</p>
-
-        </div>
-      </div>
+      <div class="parent">
+<div class="div1"><img src="CameronRosencutter/HackSprint-Website/Assets/Images/chickenandwaffle.png" alt="chickenandwaffle"> </div>
+<div class="div2"> </div>
+<div class="div3"> </div>
+<div class="div4"> </div>
+</div>
     </header>
   </section>
 </body>
