--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         extra: items will change number of columns based on window width.
       </p>
       <div class="parent">
-<div class="div1"><img src="CameronRosencutter/HackSprint-Website/Assets/Images/chickenandwaffle.png" alt="chickenandwaffle"> </div>
+<div class="div1"><img src="Assets/Images/sausageandeggs.png" alt="sausageandeggs"> </div>
 <div class="div2"> </div>
 <div class="div3"> </div>
 <div class="div4"> </div>
