--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         extra: items will change number of columns based on window width.
       </p>
       <div class="parent">
-<div class="div1"><img src="CameronRosencutter/HackSprint-Website/Assets/Images/chickenandwaffle.png" alt="chickenandwaffle"> </div>
-<div class="div2"> </div>
-<div class="div3"> </div>
-<div class="div4"> </div>
+<div class="div1"><img src="Assets/Images/chickenandwaffle.png" alt="chickenandwaffle"></div>
+<div class="div2"><img src="Assets/Images/pancakes.png" alt="pancakes"></div>
+<div class="div3"><img src="Assets/Images/cereal.png" alt="cereal"></div>
+<div class="div4"><img src="Assets/Images/sausageandeggs.png" alt="sausage"></div>
 </div>
     </header>
   </section>
