--- a/index.html
+++ b/index.html
@@ -62,12 +62,16 @@
         extra: items will be always in center.<br>
         extra: items will change number of columns based on window width.
       </p>
-<div class="parent">
-<div class="div1"><img src="Assets/Images/chickenandwaffle.png" alt="chickenandwaffle"></div>
-<div class="div2"><img src="Assets/Images/pancakes.png" alt="pancakes"></div>
-<div class="div3"><img src="Assets/Images/cereal.png" alt="cereal"></div>
-<div class="div4"><img src="Assets/Images/sausageandeggs.png" alt="sausage"></div>
-</div>
+      <div class="parent">
+        <div class="div1"><img src="Assets/Images/pancakes.png" alt="pancakes"> </div>
+        <div class="div2"><h1>Pancakes</h1><p>pancake descriton</p></div>
+        <div class="div3"><img src="Assets/Images/chickenandwaffle.png" alt="chickenand Waffle"> </div>
+        <div class="div4"><h1>Chicken and Waffle</h1> </div>
+        <div class="div5"><img src="Assets/Images/cereal.png" alt="Cereal"></div>
+        <div class="div6"><h1>Cereal</h1> </div>
+        <div class="div7"><img src="Assets/Images/sausageandeggs.png" alt="Sausage and Eggs"></div>
+        <div class="div8"> </div>
+        </div>
     </header>
   </section>
 </body>
