--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
         extra: items will change number of columns based on window width.
       </p>
       <div class="parent">
+        <!--Div 1-->
         <div class="div1"><img src="Assets/Images/pancakes.png" alt="pancakes"></div>
+        
+        <!--Div 2-->
         <div class="div2">
           <h1>Pancakes</h1>
           <p>pancake descriton</p>
@@ -75,7 +78,11 @@
             This is some dummy text.
         </div>
         </div>
+
+        <!--Div 3-->
         <div class="div3"><img src="Assets/Images/chickenandwaffle.png" alt="chickenand Waffle"> </div>
+
+        <!--Div 4-->
         <div class="div4">
           <h1>Chicken and Waffle</h1>
           <div style="background: ghostwhite; 
@@ -86,9 +93,17 @@
           This is some dummy text.
           </div> 
         </div>
+
+        <!--Div 5-->
         <div class="div5"><img src="Assets/Images/cereal.png" alt="Cereal"></div>
+
+        <!--Div 6-->
         <div class="div6"><h1>Cereal</h1> </div>
+
+        <!--Div 7-->
         <div class="div7"><img src="Assets/Images/sausageandeggs.png" alt="Sausage and Eggs"></div>
+
+        <!--Div 8-->
         <div class="div8"> </div>
         </div>
     </header>
