--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         <!--Div 2-->
         <div class="div2">
           <h1>Pancakes</h1>
-          <p>pancake descriton</p>
         <div style="background: ghostwhite; 
             font-size: 20px; 
             padding: 10px; 
@@ -99,12 +98,29 @@
 
         <!--Div 6-->
         <div class="div6"><h1>Cereal</h1> </div>
+        <div class="div4">
+          <div style="background: ghostwhite; 
+          font-size: 20px; 
+          padding: 10px; 
+          border: 1px solid lightgray; 
+          margin: 10px;">
+          This is some dummy text.
+          </div> 
 
         <!--Div 7-->
         <div class="div7"><img src="Assets/Images/sausageandeggs.png" alt="Sausage and Eggs"></div>
 
         <!--Div 8-->
         <div class="div8"> </div>
+        <div class="div4">
+          <h1>Sausage and Eggs</h1>
+          <div style="background: ghostwhite; 
+          font-size: 20px; 
+          padding: 10px; 
+          border: 1px solid lightgray; 
+          margin: 10px;">
+          This is some dummy text.
+          </div> 
         </div>
     </header>
   </section>
