--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
         <div class="div7"><img src="Assets/Images/sausageandeggs.png" alt="Sausage and Eggs"></div>
 
         <!--Div 8-->
-        <div class="div8"> </div>
-        <div class="div4">
+        <div class="div8"> 
           <h1>Sausage and Eggs</h1>
           <div style="background: ghostwhite; 
           font-size: 20px; 
@@ -121,6 +120,7 @@
           margin: 10px;">
           This is some dummy text.
           </div> 
+        </div>
         </div>
     </header>
   </section>
