--- a/index.html
+++ b/index.html
@@ -69,13 +69,6 @@
         <!--Div 2-->
         <div class="div2">
           <h1>Pancakes</h1>
-        <div style="background: ghostwhite; 
-            font-size: 20px; 
-            padding: 10px; 
-            border: 1px solid lightgray; 
-            margin: 10px;">
-            This is some dummy text.
-        </div>
         </div>
 
         <!--Div 3-->
@@ -83,29 +76,16 @@
 
         <!--Div 4-->
         <div class="div4">
-          <h1>Chicken and Waffle</h1>
-          <div style="background: ghostwhite; 
-          font-size: 20px; 
-          padding: 10px; 
-          border: 1px solid lightgray; 
-          margin: 10px;">
-          This is some dummy text.
-          </div> 
+          <h1>Chicken and Waffle</h1> 
         </div>
 
         <!--Div 5-->
         <div class="div5"><img src="Assets/Images/cereal.png" alt="Cereal"></div>
 
         <!--Div 6-->
-        <div class="div6"><h1>Cereal</h1> </div>
-        <div class="div4">
-          <div style="background: ghostwhite; 
-          font-size: 20px; 
-          padding: 10px; 
-          border: 1px solid lightgray; 
-          margin: 10px;">
-          This is some dummy text.
-          </div> 
+        <div class="div6">
+        <h1>Cereal</h1> 
+        </div> 
 
         <!--Div 7-->
         <div class="div7"><img src="Assets/Images/sausageandeggs.png" alt="Sausage and Eggs"></div>
@@ -113,13 +93,6 @@
         <!--Div 8-->
         <div class="div8"> 
           <h1>Sausage and Eggs</h1>
-          <div style="background: ghostwhite; 
-          font-size: 20px; 
-          padding: 10px; 
-          border: 1px solid lightgray; 
-          margin: 10px;">
-          This is some dummy text.
-          </div> 
         </div>
         </div>
     </header>
