--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <!--Div 2-->
         <div class="div2">
           <h1>Pancakes</h1>
+          <p>Our tasty and juicy pancakes. Good luck git pulling it from your mouth!</p>
         </div>
 
         <!--Div 3-->
