--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
 
         <!--Div 4-->
         <div class="div4">
-          <h1>Chicken and Waffle</h1> 
+          <h1>Chicken and Waffle</h1>
+          <div class="white-box">
+            Our tasty and juicy pancakes. Good luck git pulling it from your mouth!
+          </div> 
         </div>
 
         <!--Div 5-->
@@ -87,7 +90,10 @@
 
         <!--Div 6-->
         <div class="div6">
-        <h1>Cereal</h1> 
+        <h1>Cereal</h1>
+        <div class="white-box">
+          Our tasty and juicy pancakes. Good luck git pulling it from your mouth!
+        </div> 
         </div> 
 
         <!--Div 7-->
@@ -96,6 +102,9 @@
         <!--Div 8-->
         <div class="div8"> 
           <h1>Sausage and Eggs</h1>
+          <div class="white-box">
+            Our tasty and juicy pancakes. Good luck git pulling it from your mouth!
+          </div>
         </div>
         </div>
     </header>
