--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
   </section>
 
-  <section class = "food-menu-seciton">
+  <section class = "food-menu-section">
     <header>
       <h1>Menu Items</h1>
       <p>
