--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
         <!--Div 2-->
         <div class="div2">
             <div class="white-box">
-              <h1>Pancakes<h2>$13.99</h2></h1>
+              <h1>Pancakes</h1>
               Our tasty and juicy pancakes. Good luck git pulling it from your mouth!
+              <h2>$13.99</h2>
             </div>
         </div>
 
