--- a/index.html
+++ b/index.html
@@ -19,16 +19,14 @@
       <li class="nav-item">
         <a href="#about">About Us</a>
       </li>
-
-      <li class="nav-item">
-        <a href="#menu">Menu</a>
-      </li>
       <li class="nav-item">
         <a href="#contact">Contact Us</a>
       </li>
     </ul>
   </nav>
 </div>
+
+
 
 <body id="page-body" style="background-color: cadetblue;">
   <section class ="banner-section">
@@ -38,17 +36,9 @@
 
   <section class="about-us">
     <header>
-      <h1>About Us</h1>
+      <h1>What are we?</h1>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        A quos, voluptatum illum mollitia dolores libero placeat
-        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit,
-        amet consectetur adipisicing elit.
-        A quos, voluptatum illum mollitia dolores libero placeat
-        nesciunt quasi adipisci impedit!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-        A quos, voluptatum illum mollitia dolores libero placeat
-        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
+        We are a breakfast themed resturaunt 
       </p>
     </header>
   </section>
@@ -111,3 +101,4 @@
     </header>
   </section>
 </body>
+</html>
