--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <title>Restaurant Website</title>
 
-    <div class="parent">
-      <div class="divA"><img src="Assets/Images/BettyIconedit.png" alt="Bettyicon"></div>
+    <div class="parent1">
+      <div class="div9"><img src="Assets/Images/BettyIconedit.png" alt="Bettyicon"></div>
 
 
       <div class="divB">
