--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <title>Restaurant Website</title>
 
+    <section class ="Topsection">
+      <body>
     <div class="parent1">
       <div class="div9"><img src="Assets/Images/BettyIconedit.png" alt="Bettyicon"></div>
 
@@ -28,6 +30,9 @@
           </ul>
         </nav>
       </div>
+      </body>
+      </section>
+      
 
 
 
@@ -71,11 +76,7 @@
     <header>
       <h1>What are we?</h1>
       <p>
-<<<<<<< HEAD
         We are a breakfast themed resturaunt dedicated to serving you the best food imaginable!
-=======
-        We are a breakfast themed resturaunt
->>>>>>> 52bba0a23deeb2da24cf376628fe9e6274140462
       </p>
     </header>
   </section>
