--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <title>Restaurant Website</title>
 
-    <section class ="Topsection">
+    <section class ="newsection">
       <body>
-    <div class="parent1">
+    <div class="logo">
       <div class="div9"><img src="Assets/Images/BettyIconedit.png" alt="Bettyicon"></div>
 
 
@@ -31,7 +31,7 @@
         </nav>
       </div>
       </body>
-      </section>
+      
       
 
 
@@ -44,6 +44,7 @@
       <div class="divD"> </div>
       <div class="divF"> </div>
       </div>
+    </section>
 
 <div>
   </head>
