--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class ="newsection">
       <body>
     <div class="logo">
-      <div class="div9"><img src="Assets/Images/BettyIconedit.png" alt="Bettyicon"></div>
+      <div class="div9"><img src="Assets/Images/BettyIcon@0.25x.png" alt="Bettyicon"></div>
 
 
       <div class="divB">
