--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <title>Restaurant Website</title>
 
+    <div class="parenttop">
     <section class ="new">
       <div class="div9">
         <img src="Assets/Images/BettyIcon@0.25x.png" alt="bettyicon">
@@ -57,7 +58,7 @@
       <div class="divD"> </div>
       <div class="divF"> </div>
       </div>
-    </section>
+    
 
 <div>
   </head>
