--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <div class="newparent">
 
     <!--Div9-->
-    <div class="div9"></div>
+    <div class="div9"><img src="Assets/Images/BettyIcon@0.25x.png" alt="bettyicon"></div>
 
-    <div class="div10"> </div>
-    <div class="div11"> </div>
-    <div class="div12"> </div>
-    <div class="div13"> </div>
+    <div class="div10"><p>here is text</p> </div>
+    <div class="div11"><p>more text</p> </div>
+    <div class="div12"><p>more text</p> </div>
+    <div class="div13"><p>more text</p> </div>
     </div>
 
 
