--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
 
 
 
-  <section class ="banner-section">
-    <body>
-      <div class=“slider-container”>
-        <div class=“slide”>
-          <img src=Assets/Images/Banner.png alt=”artboard1”/>
-        </div>
-    </body>
-  </section>
-
 
   <div class="newparent">
 
     <!--Div9-->
     <div class="div9"><img src="Assets/Images/BettyIcon@0.25x.png" alt="bettyicon"></div>
 
-    <div class="div10"><p>here is text</p> </div>
+    <div class="div10">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+
+
     <div class="div11"><p>more text</p> </div>
     <div class="div12"><p>more text</p> </div>
     <div class="div13"><p>more text</p> </div>
