--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <div class="newparent">
 
-    <!--Div9-->
+    <!--Div9
     <div class="div9"><img src="Assets/Images/BettyIcon@0.25x.png" alt="bettyicon"></div>
-
+    -->
     <div class="div10">
       <ul class="nav">
         <li><a href="#">Home</a></li>
