--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
   <div class="newparent">
 
-    <!--Div9
-    <div class="div9"><img src="Assets/Images/BettyIcon@0.25x.png" alt="bettyicon"></div>
-    -->
+    <!--Div9-->
+    <div class="div9"><h1>Bettys Breakfast Bistro</h1></div>
     <div class="div10">
       <ul class="nav">
         <li><a href="#">Home</a></li>
