--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <div class="newparent">
 
     <!--Div9-->
-    <div class="div9"><h1>Bettys Breakfast Bistro</h1></div>
+    <div class="div9">
+      <h1>Bettys Breakfast Bistro</h1>
+      <img src="Assets/Images/BettyIcon@0.25x.png" alt="icon">
+    </div>
+
+
     <div class="div10">
       <ul class="nav">
         <li><a href="#">Home</a></li>
