attempted to fix internal links. unsuccessful

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <nav>
     <ul class="nav-flex-row">
       <li class="nav-item">
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a href="#about">About Us</a>
+        <a href="index.html#about">About Us</a>
       </li>
       <li class="nav-item">
-        <a href="#contact">Contact Us</a>
+        <a href="index.html#contact">Contact Us</a>
       </li>
     </ul>
   </nav>
@@ -36,9 +36,9 @@
   </section>
 
 
-  <section class="about-us">
+  <section class="About-us">
     <header>
-      <h1>What are we?</h1>
+      <span id="About"><h1>What are we?</h1></span>
       <p>
         We are a breakfast themed resturaunt
       </p>
