--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
 
 
     <div class="div11">
-      <div class="scroll-container">
-        <img src="Assets/Images/Artboard1.png" alt="Cinque Terre">
-        <img src="Assets/Images/Artboard2.png" alt="Forest">
-        <img src="Assets/Images/Artboard3.png" alt="Northern Lights">
-      </div>
+      <img src="Assets/Images/Banner.png" alt="banner">
 
 
     </div>
