--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="#">Services</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Contact</a></li>
+        <img src="Assets/Images/Banner.png" alt="banner">
       </ul>
     </div>
 
