--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     </div>
 
 
+    <div class="div11">
+      <img src="Assets/Images/Banner.png" alt="banner">
 
+
+    </div>
 
 
     <div class="div12"><p>more text</p> </div>
