--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     -->
     </div>
 
+    <div class="clearfix">
 
     <div class="div10">
       <ul class="nav">
@@ -35,12 +36,13 @@
     </div>
 
 
+    
     <div class="div11">
       <img src="Assets/Images/Banner.png" alt="banner">
 
 
     </div>
-
+  </div>
 
     <div class="div12"><p>more text</p> </div>
     <div class="div13"><p>more text</p> </div>
