--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
+
     <div class="div11">
-      <img src="Assets/Images/Banner.png" alt="banner">
+  <img src="Assets/Images/Artboard1.png" alt="Cinque Terre">
+  <img src="Assets/Images/Artboard2.png" alt="Forest">
+  <img src="Assets/Images/Artboard3.png" alt="Northern Lights">
+  <img src="img_mountains.jpg" alt="Mountains">
 </div>
+
 
 
     <div class="div12"><p>more text</p> </div>
