--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     
     <div class="div10">
       <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="aboutus.html">About Us</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Contact</a></li>
