--- a/index.html
+++ b/index.html
@@ -43,20 +43,10 @@
 
 
 
-    <div class="div12"><p>more text</p> </div>
-    <div class="div13"><p>more text</p> </div>
-    </div>
-
-
-
-  <section class="About-us">
-    <header>
-      <span id="About"><h1>What are we?</h1></span>
-      <p>
-        We are a breakfast themed resturaunt dedicated to serving you the best food imaginable!
-      </p>
-    </header>
-  </section>
+<div class="parent">
+  <div class="div1"> </div>
+  <div class="div2"> </div>
+  </div>
 
   <section class = "food-menu-section">
     <header>
