--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
 </div>
 
 
-
-<div class="parent">
-  <div class="div1"> </div>
-  <div class="div2"> </div>
-  </div>
+  <section class="About-us">
+    <header>
+      <span id="About"><h1>What are we?</h1></span>
+      <p>
+        We are a breakfast themed restaurant dedicated to serving you the best food imaginable. Our highly trained chefs will provide you with the freshest dishes imaginable. Our passion is combining the intricate language of coding with pancakes. Why? 
+        Eh, who knows.
+      </p>
+    </header>
+  </section>
 
   <section class = "food-menu-section">
     <header>
