--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <span id="About"><h1>What are we?</h1></span>
         <p>
           We are a breakfast themed restaurant dedicated to serving you the best food imaginable. Our highly trained chefs will provide you with the freshest dishes imaginable. Our passion is combining the intricate language of coding with pancakes. Why? 
-          Eh, who knows. Just watch this baking video to take your mind off this bizarre idea.
+          Eh, who knows. Just check out our menu to take your mind off this bizarre idea.
         </p>
       </header>
     </section>
