--- a/index.html
+++ b/index.html
@@ -64,7 +64,19 @@
       <h1>Menu Items</h1>
     </header>
 
-    
+    <div class="parent">
+      <div class="diva"> </div>
+      <div class="divb"> </div>
+      <div class="divc"> </div>
+      <div class="divd"> </div>
+      <div class="dive"> </div>
+      <div class="divf"> </div>
+      <div class="divg"> </div>
+      <div class="divh"> </div>
+      <div class="divi"> </div>
+      <div class="divj"> </div>
+      <div class="divk"> </div>
+      </div>
       
 </body>
 </html>
