--- a/index.html
+++ b/index.html
@@ -65,17 +65,44 @@
     </header>
 
     <div class="parent">
-      <div class="diva"> </div>
-      <div class="divb"> </div>
+      <div class="diva">
+        <img src="Assets/Images/pancakes.png" alt="pancakes">
+      </div>
+
+
+      <div class="divb"> 
+        <h1>Python Pancakes</h1>
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
+      </div>
+
+
       <div class="divc"> </div>
+
+
       <div class="divd"> </div>
+
+
       <div class="dive"> </div>
+
+
       <div class="divf"> </div>
+
+
       <div class="divg"> </div>
+
+
       <div class="divh"> </div>
+
+
       <div class="divi"> </div>
+
+
       <div class="divj"> </div>
+
+
       <div class="divk"> </div>
+
+
       </div>
       
 </body>
