--- a/index.html
+++ b/index.html
@@ -66,23 +66,26 @@
 
     <div class="parent">
       <div class="diva">
-        <img src="Assets/Images/pancakes.png" alt="pancakes">
       </div>
 
 
       <div class="divb"> 
-        <h1>Python Pancakes</h1>
-        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
+      
       </div>
 
 
       <div class="divc"> </div>
 
 
-      <div class="divd"> </div>
+      <div class="divd">
+        <img src="Assets/Images/pancakes.png" alt="pancakes">
+      </div>
 
 
-      <div class="dive"> </div>
+      <div class="dive"> 
+        <h1>Python Pancakes</h1>
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
+      </div>
 
 
       <div class="divf"> </div>
