--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
       </div>
 
 
-      <div class="divc"> </div>
+      <div class="divc">
+        <img src="Assets/Images/pancakes.png" alt="pancakes">
+        <h1>Python Pancakes</h1>
+      </div>
 
 
       <div class="divd">
-        <img src="Assets/Images/pancakes.png" alt="pancakes">
+        
       </div>
 
 
       <div class="dive"> 
-        <h1>Python Pancakes</h1>
-        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
+        
       </div>
 
 
