--- a/index.html
+++ b/index.html
@@ -67,37 +67,52 @@
 
 
       <div class="divc">
+        <h1>Menu</h1>
+      </div>
+
+
+      <div class="divd">
         <img src="Assets/Images/pancakes.png" alt="pancakes">
         <h1>Python Pancakes</h1>
       </div>
 
 
-      <div class="divd">
-        
-      </div>
-
-
       <div class="dive"> 
-        
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
       </div>
 
 
-      <div class="divf"> </div>
+      <div class="divf">
+      <img src="Assets/Images/chickenandwaffle.png" alt="Chicken">
+      <h1>Chicken/Waffle.js</h1>  
+      </div>
 
 
-      <div class="divg"> </div>
+      <div class="divg">
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+      </div>
 
 
-      <div class="divh"> </div>
+      <div class="divh"> 
+<img src="Assets/Images/cereal.png" alt="Cereal">
+<h1>Froot if/and Loops</h1>
+      </div>
 
 
-      <div class="divi"> </div>
+      <div class="divi">
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+      </div>
 
 
-      <div class="divj"> </div>
+      <div class="divj">
+        <img src="Assets/Images/sausageandeggs.png" alt="sausage">
+        <h1>Sausage.yum</h1>
+      </div>
 
 
-      <div class="divk"> </div>
+      <div class="divk">
+        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+      </div>
 
 
       </div>
