--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
 
       <div class="dive"> 
         <p>Our python pancakes will make it hard to git pull it from your mouth.</p>
-        <p1>$13.99</p1>
       </div>
 
 
@@ -90,7 +89,8 @@
 
 
       <div class="divg">
-        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+        <p>Chicken and waffles? Is it breakfast or dinner food?
+        </p>  
       </div>
 
 
@@ -101,7 +101,7 @@
 
 
       <div class="divi">
-        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+        <p>Our cereal increases your intelligence by 10%!</p>  
       </div>
 
 
@@ -112,7 +112,7 @@
 
 
       <div class="divk">
-        <p>Our python pancakes will make it hard to git pull it from your mouth.</p>  
+        <p>Betty couldn’t find any problems with this meal.</p>  
       </div>
 
 
