--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Services</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="https://www.chefworks.com/chef-hat-hat?CRTP=paidsearch&gclid=CjwKCAjwloynBhBbEiwAGY25dMp_5jsq5uYIUgkXzXo0hW_YDG5m7NkNSaJ2D6an70I2EJB595W7KhoCP30QAvD_BwE">Products</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
