--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </div>
 
     <div class="div11">
-  <img src="Assets/Images/Artboard1.png" alt="Cinque Terre">
-  <img src="Assets/Images/Artboard2.png" alt="Forest">
-  <img src="Assets/Images/Artboard3.png" alt="Northern Lights">
-  <img src="img_mountains.jpg" alt="Mountains">
+  <img src="Assets/Images/Artboard1.png" alt="1">
+  <img src="Assets/Images/Artboard2.png" alt="2">
+  <img src="Assets/Images/Artboard3.png" alt="3">
 </div>
 
 
