--- a/aboutus.html
+++ b/aboutus.html
@@ -28,8 +28,21 @@
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutus.html">About Us</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Services</a></li>
+        <li><a href="https://www.chefworks.com/chef-hat-hat?CRTP=paidsearch&gclid=CjwKCAjwloynBhBbEiwAGY25dMp_5jsq5uYIUgkXzXo0hW_YDG5m7NkNSaJ2D6an70I2EJB595W7KhoCP30QAvD_BwE">Products</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
+
+    <div class="div11">
+        <img src="Assets/Images/Artboard1.png" alt="1">
+        <img src="Assets/Images/Artboard2.png" alt="2">
+        <img src="Assets/Images/Artboard3.png" alt="3">
+      </div>
+
+      <div class="aboutparent">
+        <div class="aboutdiv1"><img src="Assets/Images/T0423U1MW21-U04J3PVCQ1F-c2b3688f43f7-512.png" alt=""> </div>
+        <div class="aboutdiv2"><h1>Cameron Rosencutter</h1><p>A graphic designer wanting to use his talnets in coding as well.</p></div>
+        <div class="aboutdiv3"> </div>
+        <div class="aboutdiv4"><img src="Assets/Images/T0423U1MW21-U04HXLY2T0R-f519563637f1-512.jpeg" alt=""> </div>
+        </div>
