--- a/aboutus.html
+++ b/aboutus.html
@@ -38,4 +38,11 @@
   <img src="Assets/Images/Artboard1.png" alt="1">
   <img src="Assets/Images/Artboard2.png" alt="2">
   <img src="Assets/Images/Artboard3.png" alt="3">
+
+  <div class="Cameron">
+    <img src="Assets/Images/T0423U1MW21-U04J3PVCQ1F-c2b3688f43f7-512.png" alt="">
+    <h1>Cameron Rosencutter</h1>
+    <p>A graphic designer that wanted to expand his horizons to coding.</p>
+
+  </div>
 </div>
