--- a/aboutus.html
+++ b/aboutus.html
@@ -38,6 +38,7 @@
   <img src="Assets/Images/Artboard1.png" alt="1">
   <img src="Assets/Images/Artboard2.png" alt="2">
   <img src="Assets/Images/Artboard3.png" alt="3">
+    </div>
 
   <div class="Cameron">
     <img src="Assets/Images/T0423U1MW21-U04J3PVCQ1F-c2b3688f43f7-512.png" alt="">
