--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="aboutus.css">
 
     <title>Restaurant Website</title>
 
