--- a/aboutus.html
+++ b/aboutus.html
@@ -41,9 +41,15 @@
     </div>
 
   <div class="Cameron">
-    <img src="Assets/Images/T0423U1MW21-U04J3PVCQ1F-c2b3688f43f7-512.png" alt="">
+    <img src="Assets/Images/T0423U1MW21-U04J3PVCQ1F-c2b3688f43f7-512.png" alt="A expert of visual art should be pictured here.">
     <h1>Cameron Rosencutter</h1>
     <p>A graphic designer that wanted to expand his horizons to coding.</p>
+
+  </div>
+  <div class="Jabulani">
+    <img src="Assets/Images/T0423U1MW21-U04HXLY2T0R-f519563637f1-512" alt="An alliteration enjoyer's image should show here.">
+    <h1>Jabulani Ndhlovu</h1>
+    <p>An engineer moving from casual comprehension of code to more complete capability.</p>
 
   </div>
 </div>
