--- a/aboutus.html
+++ b/aboutus.html
@@ -46,10 +46,10 @@
     <p>A graphic designer that wanted to expand his horizons to coding.</p>
 
   </div>
-  <div class="Jabulani">
-    <img src="Assets/Images/T0423U1MW21-U04HXLY2T0R-f519563637f1-512" alt="An alliteration enjoyer's image should show here.">
+  <div class="Cameron">
+    <img src="Assets/Images/jabulani_portrait.jpeg" alt="An alliteration enjoyer's image should show here.">
     <h1>Jabulani Ndhlovu</h1>
-    <p>An engineer moving from casual comprehension of code to more complete capability.</p>
+    <p>An engineer rising beyond casual comprehension of code to more complete capability.</p>
 
   </div>
 </div>
