--- a/aboutus.html
+++ b/aboutus.html
@@ -47,7 +47,7 @@
 
   </div>
   
-  <div class="Jabulani">
+  <div class="Cameron">
     <img src="Assets/Images/jabulani_portrait.jpeg" alt="An alliteration enjoyer's image should show here.">
     <h1>Jabulani Ndhlovu</h1>
     <p>An engineer rising beyond casual comprehension of code to more complete capability.</p>
